feat(descents): add dynamic search with specification filters
- Add DescentSpecification for dynamic filtering
- Support filtering by name, location, province
- Add filtering by verticalCharacter, aquaticCharacter and commitment
- Add date range filtering (from/to)
- Integrate JpaSpecificationExecutor in repository
- Update service layer to support dynamic queries
- Expose unified GET /api/descents endpoint with optional filters
- Maintain pagination and sorting support